Sat Jul 29 04:38:30 1995  Tom Yu  <tlyu@dragons-lair.MIT.EDU>

	* configure.in: Don't link with -lkadm.

Fri Jul 7 15:44:56 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Remove all explicit library handling.
	* configure.in - add USE_KADM_LIBRARY and KRB5_LIBRARIES.


Thu Jun 15 17:38:06 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Change explicit library names to -l<lib> form, and
		change target link line to use $(LD) and associated flags.
		Also, remove DBMLIB, it was not used.
	* configure.in - Remove dbm library checks, these are no longer needed
		with the Berkeley database code.  Also, add shared library
		usage check.

Sat Jun 10 22:57:55 1995  Tom Yu  (tlyu@dragons-lair)

	* pop_init.c: krb5_auth_context redefinitions

Fri Jun  9 18:27:22 1995    <tytso@rsx-11.mit.edu>

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.

Wed May 03 03:30:51 1995  Chris Provenzano (proven@mit.edu)

        * pop_init.c: (krb5_recvauth()): No longer needs the rc_type arg.

Mon Mar 27 16:52:48 1995    <tytso@rsx-11.mit.edu>

	* pop_init.c (pop_init): Put in a type cast to shut up the
		compiler.  Popper is still using gethostbyname()'s static
		data wrong; this should be fixed eventually.

Mon Mar 27 07:56:26 1995 Chris Provenzano (proven@mit.edu)

        * pop_init.c Use new calling conventions for krb5_recvauth().

Tue Mar 14 16:54:41 1995    <tytso@rsx-11.mit.edu>

	* Makefile.in: Delete definitions defined in pre/config.in.

Thu Mar  2 12:28:37 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (ISODELIB): Remove reference to $(ISODELIB).

Wed Mar  1 11:56:31 1995  Theodore Y. Ts'o  <tytso@dcl>

	* configure.in: Remove ISODE_INCLUDE, replace check for -lsocket
		and -lnsl with WITH_NETLIB check.

Tue Feb 28 01:54:56 1995  John Gilmore  (gnu at toad.com)

	* pop_init.c, pop_pass.c, pop_user.c, mh-6.8.patch:  Avoid
	<krb5/...> includes.

Fri Jan 13 15:23:47 1995  Chris Provenzano (proven@mit.edu)
